2015-07-12  David Anderson
     * RUNALL.sh : Removed dd2, ddtodd2 stuff. Not needed.
     *  debugfission/archivedwo-iMvvv.base.gz,debugfission/archivedwo.base.gz
       debugfission/archiveo.base.gz debugfission/targetdwo.base.gz
       debugfission/targeto.base.gz :DW_AT_dwo_id print changed.
     * debugfission/runtest.sh: Add description of update to baseline
     * debugfissionb/RUN: Minor change for hand testing.
     * dwgena/test1.base.gz,dwgena/test2.base.gz,dwgena/test4.base.gz:
       updated baselines, new DW_AT_dwo_id print.
     * dwgena/runtest.sh: Add description of update to baseline.

2015-03-07  David Anderson
     * dwarfdump-x86_64-ubuntu-13.04.O, dwarfdump-x86-ubuntu-13.04.O,
       dwarfdump-i386-freebsd-9.1.O,dwarfdump-x86_64-freebsd-9.1.O:
       New versions because of updated dwarfdump tag-attr lists
       and the revised timing of certain range checks.
2015-02-04  David Anderson
     * DWARFTEST.sh: Actually run the new test objects, with all
       options.
2015-02-04  David Anderson
     * DWARFTEST.sh: adding new tests, diederen2 directory. And a new test
       in williamson directory. Thanks to Edward Williamson
       and Arnaud Diederen for these great little test objects.
2015-01-18  David Anderson
     * Adding support for debugfission. See emre3/a.out.dwp
2015-01-05  David Anderson
     * dwarfdump-x86_64-ubuntu-13.04.O, dwarfdump-x86-ubuntu-13.04.O:
       Renamed, removing the -13.04 from the name.
       Updated for fixes to libdwarf on COMDAT object. No coredump now.
2015-01-01  David Anderson
     *  dwarfdump-i386-freebsd-9.1.O,dwarfdump-x86_64-freebsd-9.1.O:
        freebsd baseline executable updated.
